[package]
name = "rexplorer"
version = "0.0.0"
edition = "2021"
description = "Handle your project files in your terminal with a simple, yet pretty UI!"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheEmeraldBee/rexplorer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
home = "0.5.5"
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["file_appender"] }
ratatui = { version = "0.23.0", features = ["macros", "all-widgets"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tui-input = "0.8.0"
