[package]
name = "rexplorer"
version = "0.0.0"
edition = "2021"
description = "Handle your project files in your terminal with a simple, yet pretty UI!"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/TheEmeraldBee/rexplorer"

[dependencies]
anyhow = "1.0.75"
tui-input = "0.8.0"
widgetui = "0.2.1"
